--- a/config.yaml
+++ b/config.yaml
@@ -3,5 +3,5 @@
 
 Settings:
   Port: 3978
-  AppId: ""
+  AppId: "2581540a-dadf-4f9e-bd2c-cc0748cecd54"
   AppPassword: "qafRETH[vE/4l]4o24+-]W63*1FA1171"
