--- a/config.yaml
+++ b/config.yaml
@@ -3,5 +3,5 @@
 
 Settings:
   Port: 3978
-  AppId: "2581540a-dadf-4f9e-bd2c-cc0748cecd54"
-  AppPassword: "zjgjXGVR1558#_opbWYG3_]"
+  AppId: "37608e1c-79b0-48e1-a074-e01be75fe53c"
+  AppPassword: "ZW6@]v.VnlTrzO/sW6jrXhGpV6F1/MYB"
